- Fixed bug #44861 (scrollable cursor don't work with pgsql)